CORE-329: Fixing alignment issue for category filters.

--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/facet/_facet.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/facet/_facet.scss
@@ -63,6 +63,7 @@
 
     .facet-item__count {
       margin-#{$left}: 0.125rem;
+      vertical-align: bottom !important;
     }
   }
 }
@@ -109,6 +110,7 @@ ul[data-drupal-facet-id=plp_category_facet] {
   &.js-facets-checkbox-links {
     display: block;
     max-height: none;
+    padding: 0.625rem 0;
   }
 
   > li {
@@ -164,10 +166,7 @@ ul[data-drupal-facet-id=plp_category_facet] {
   .facet-item--expanded {
     > ul {
       margin-#{$left}: 0.625rem;
-
-      @include breakpoint($upto-desktop) {
-        padding-top: 0.625rem !important;
-      }
+      padding-top: 0 !important;
 
       .facet-item {
         margin-#{$left}: 0;
@@ -211,7 +210,7 @@ ul[data-drupal-facet-id=plp_category_facet] {
         font-weight: normal;
 
         @include icon(chevron#{$left}, before) {
-          top: 0.5rem;
+          top: 0.875rem;
           cursor: pointer;
         }
       }
@@ -219,9 +218,12 @@ ul[data-drupal-facet-id=plp_category_facet] {
   }
 
   .facet-item {
+    margin-bottom: 0;
+
     label {
       display: flex;
       align-items: center;
+      min-height: 2rem;
 
       .facet-item__count,
       .facet-item__value {
@@ -252,7 +254,7 @@ ul[data-drupal-facet-id=category] {
         position: absolute !important;
         #{$left}: -1rem;
         font-size: 1.875rem;
-        top: 0.5rem;
+        top: 0.875rem;
         transform: translateY(-50%);
         color: $category_facet_active_icon;
         cursor: pointer;
@@ -337,6 +339,14 @@ ul[data-drupal-facet-id=plp_category_facet] {
         @include icon(checkboxfull) {
           color: $primary_checkbox_filled;
         }
+      }
+    }
+  }
+
+  > li {
+    > label {
+      .facet-item__value {
+        margin-#{$left}: 0.25rem;
       }
     }
   }
